--- a/requirements.txt
+++ b/requirements.txt
@@ -4,15 +4,15 @@ cachetools==5.0.0
 certifi==2021.10.8
 charset-normalizer==2.0.12
 Django==4.0.4
-google-auth==2.6.6
-google-auth-oauthlib==0.5.1
-gspread==5.3.2
+# google-auth==2.6.6
+# google-auth-oauthlib==0.5.1
+# gspread==5.3.2
 gunicorn==20.1.0
 httplib2==0.20.4
 idna==3.3
-numpy==1.22.3
-oauth2client==4.1.3
-oauthlib==3.2.0
+# numpy==1.22.3
+# oauth2client==4.1.3
+# oauthlib==3.2.0
 psycopg2==2.9.3
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
