update validate data on browser and change slider position with poster

--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,8 @@ __pycache__/
 *$py.class 
 
 # Distribution / packaging 
-.Python build/ 
+.Python build/
+staticfiles/
 develop-eggs/ 
 dist/ 
 downloads/ 
