--- a/requirements.txt
+++ b/requirements.txt
@@ -3,25 +3,36 @@ backports.zoneinfo==0.2.1
 cachetools==5.0.0
 certifi==2021.10.8
 charset-normalizer==2.0.12
+defusedxml==0.7.1
+diff-match-patch==20200713
 Django==4.0.4
-# google-auth==2.6.6
-# google-auth-oauthlib==0.5.1
-# gspread==5.3.2
+django-import-export==2.8.0
+et-xmlfile==1.1.0
+google-auth==2.6.6
+google-auth-oauthlib==0.5.1
+gspread==5.3.2
 gunicorn==20.1.0
 httplib2==0.20.4
 idna==3.3
-# numpy==1.22.3
-# oauth2client==4.1.3
-# oauthlib==3.2.0
+MarkupPy==1.14
+numpy==1.22.3
+oauth2client==4.1.3
+oauthlib==3.2.0
+odfpy==1.4.1
+openpyxl==3.0.9
 psycopg2==2.9.3
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pyparsing==3.0.8
+PyYAML==6.0
 requests==2.27.1
 requests-oauthlib==1.3.1
 rsa==4.8
 six==1.16.0
 sqlparse==0.4.2
+tablib==3.2.1
 urllib3==1.26.9
 uWSGI==2.0.20
 whitenoise==6.0.0
+xlrd==2.0.1
+xlwt==1.3.0
